align correction

--- a/portfolio/src/assets/scss/home/skills-section.scss
+++ b/portfolio/src/assets/scss/home/skills-section.scss
@@ -71,4 +71,9 @@ section.skills-section {
       }
     }
   }
+  @media screen and (max-width: 576px) {
+    .wrapper {
+      padding-top: 10vh;
+    }
+  }
 }
